--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
         <h1>Click on images to display them</h1>
     </div>
 
-    <div class="mainFlex">
-        <div id="mainImageDisplay">
-            <!-- <img  data-class="image1" id= "mainImage" src="images/ellephoenixTransparent.png" alt="Displayed image" id="mainImage"> -->
+    <div class = "greaterflex">
+        <div class="mainFlex">
+            <div id="mainImageDisplay">
+                <!-- <img  data-class="image1" id= "mainImage" src="images/ellephoenixTransparent.png" alt="Displayed image" id="mainImage"> -->
+            </div>
         </div>
+    
+        <div class="flex-container">
+            <div class="selection">
+                <img data-class="image1" src="" alt="my minecraft skin" id="ellephoenix"
+                    class="selection">
+            </div>
+            <div class="selection">
+                <img data-class="image2" src="" alt="mobster minecraft skin" id="mobster"
+                    class="selection">
+            </div>
+            <div class="selection">
+                <img data-class="image3" src="" alt="Skull-faced iceking minecraft skin" id="ice_king"
+                    class="selection">
+            </div>
+            <div class="selection">
+                <img data-class="image4" src="" alt="medieval woman in green dress minecraft skin"
+                    id="woman" class="selection">
+            </div>
+        </div>
+
     </div>
-
-
-
-
-    <div class="flex-container">
-        <div class="selection">
-            <img data-class="image1" src="" alt="my minecraft skin" id="ellephoenix"
-                class="selection">
-        </div>
-        <div class="selection">
-            <img data-class="image2" src="" alt="mobster minecraft skin" id="mobster"
-                class="selection">
-        </div>
-        <div class="selection">
-            <img data-class="image3" src="" alt="Skull-faced iceking minecraft skin" id="ice_king"
-                class="selection">
-        </div>
-        <div class="selection">
-            <img data-class="image4" src="" alt="medieval woman in green dress minecraft skin"
-                id="woman" class="selection">
-        </div>
-    </div>
+    
 
 
     <!--Move script to the bottom-->
